--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
     flex-direction: column;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     margin: 0;
 }
 
@@ -25,7 +25,7 @@ body {
 }
 
 .main {
-    width: 100vw;
+    width: 100%;
     overflow: auto;
 }
 
@@ -58,6 +58,12 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     font-family: var(--font-3);
+    font-size: .875rem;
+    transition: all .3s ease;
+}
+.header__a:hover {
+    transform: scale(1.125);
+    color: #F0E448;
     font-size: .9375rem;
 }
 
@@ -69,12 +75,6 @@ body {
 
 .header__img:hover {
     transform: translateY(-0.3125rem);
-}
-
-.header__icon {
-    color: #fff;
-    width: 2.75rem;
-    margin-left: 5rem;
 }
 
 /* MAIN */
@@ -477,11 +477,6 @@ p.sobre__p {
         margin-top: .625rem;
     }
 
-    .header__icon {
-        order: 3;
-        margin-left: 0;
-    }
-
     .header {
         flex-direction: column;
         justify-content: center;
@@ -491,8 +486,9 @@ p.sobre__p {
     .banner__h1 {
         position: absolute;
         bottom: 0;
-        font-size: 13.75rem;
+        font-size: 10.75rem;
         margin: 0;
+        letter-spacing: -0.5625rem;
     }
 
     .sobre {
@@ -504,6 +500,11 @@ p.sobre__p {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        padding: 0;
+    }
+
+    .sobre__h1 {
+        font-size: 2.2rem;
     }
 
     p.sobre__p {
@@ -540,6 +541,15 @@ p.sobre__p {
         opacity: .4;
         width: 18.75rem;
         cursor: pointer;
+    }
+
+    .popup__div {
+        width: 90vw;
+    }
+
+    .popup__p {
+        height: 50vh;
+        overflow: scroll;
     }
 
     /* footer */
